# cigzip

./: .gitignore  Cargo.toml  README.md
examples/: example.fa  example.paf
src/: main.rs  sequence_index.rs
src/sequence/: agc_index.rs  faidx.rs  gdb_index.rs  mod.rs  sequence_index.rs
