[package]
name = "cigzip"
version = "0.1.0"
edition = "2021"
authors = ["Andrea Guarracino <aguarracino@tgen.org>"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rust-htslib = { version = "1.0.0", default-features = false, features = ["libdeflate"] }
flate2 = "1.1"
log = "0.4"
env_logger = "0.11"
rayon = "1.10"
indicatif="0.18"

# Dependencies for AGC format (for sequences) support
ragc-core = { git = "https://github.com/ekg/ragc", rev = "40e5cad" }

#lib_wfa2 = { path = "/home/guarracino/Dropbox/git/lib_wfa2"}
lib_wfa2 = { git = "https://github.com/AndreaGuarracino/lib_wfa2", rev = "8859b6a214141968f37d9bcb22552408318adda0" }
#tracepoints = { path = "/home/guarracino/git/tracepoints"}
tracepoints = { git = "https://github.com/AndreaGuarracino/tracepoints", rev = "c0feb1dfc13ef877171ceae3ac58a14c5a9dfff4" }
#tpa = { path = "/home/guarracino/git/tpa" }
tpa = { git = "https://github.com/AndreaGuarracino/tpa", rev = "50623a463ffdb388b64cd79141cd7f30174c6a50" }

[features]
default = []
