[package]
name = "cigzip"
version = "0.1.0"
edition = "2021"
authors = ["Andrea Guarracino <aguarracino@tgen.org>"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rust-htslib = { version = "1.0.0", default-features = false, features = ["libdeflate"] }
flate2 = "1.1"
log = "0.4"
env_logger = "0.11"
rayon = "1.10"
indicatif="0.18"
tikv-jemallocator = "0.6"
onecode = { git = "https://github.com/pangenome/onecode-rs" }

# Dependencies for AGC format (for sequences) support
ragc-core = { git = "https://github.com/ekg/ragc", rev = "40e5cad" }

lib_wfa2 = { git = "https://github.com/AndreaGuarracino/lib_wfa2", rev = "dac5d8b23aeaf4b76bebd5e4e2e1511fc25d18ac" }
#tracepoints = { path = "/home/guarracino/git/tracepoints"}
tracepoints = { git = "https://github.com/AndreaGuarracino/tracepoints", rev = "f6dfb026e558e0398852ffb5376ab4119efe3e7d" }
#tpa = { path = "/home/guarracino/git/tpa" }
tpa = { git = "https://github.com/AndreaGuarracino/tpa", rev = "af02712f14470b343270e3dc41b556106edc2248" }

[features]
default = []
sysmalloc = []
